Showcase updated with real content for first video, improved spacing

--- a/showcase/index.html
+++ b/showcase/index.html
@@ -27,20 +27,25 @@
       <!-- RayTracer -->
       <div class="project">
         <div class="project-video videoContainer">
-          <iframe src="https://www.youtube.com/embed/ScMzIvxBSi4" title="Project 1 Video" allowfullscreen></iframe>
+          <iframe src="https://www.youtube.com/embed/k9XlHAv-3uk" title="Project 1 Video" allowfullscreen></iframe>
         </div>
         <div class="project-text content">
           <h2>Real-Time Hardware Accelerated Raytracing in Vulkan</h2>
           <hr class="line" style="width: 100%; margin: 0 auto; height: 0.2vh; border: none; background-color: rgb(64, 64, 64);">
       
-          <p>This project showcases [brief description]. The goal was to [state goal] and I implemented [key techniques or features].</p>
+          <p>This personal project is the result of my interest in high speed raytracing techniques and the Vulkan API. By utilizing Vulkan’s hardware accelerated raytracing I was able to implement realistic features like shadows, reflections and transparency all in real-time. Coming together for a level of visual realism that I am very proud of!</p>
+          <div class="image-row">
+            <img src="/media/RayTracer1.png" alt="Camera movement gif" class="gameDescriptionImage">
+            <img src="/media/RayTracer2.png" alt="Camera movement gif" class="gameDescriptionImage">
+            <img src="/media/RayTracer3.png" alt="Camera movement gif" class="gameDescriptionImage">
+          </div>
         </div>
       </div>
 
       <hr class="line" style="width: 100%; margin: 0 auto; height: 0.2vh; border: none; background-color: rgb(128, 128, 128);">
       
       <!-- Project 2 (reverse layout) -->
-      <div class="project reverse">
+      <div class="project">
         <div class="project-video videoContainer">
           <iframe src="https://www.youtube.com/embed/ScMzIvxBSi4" title="Project 2 Video" allowfullscreen></iframe>
         </div>
