Added new video

--- a/showcase/index.html
+++ b/showcase/index.html
@@ -35,9 +35,9 @@
       
           <p>This personal project is the result of my interest in high speed raytracing techniques and the Vulkan API. By utilizing Vulkan’s hardware accelerated raytracing I was able to implement realistic features like shadows, reflections and transparency all in real-time. Coming together for a level of visual realism that I am very proud of!</p>
           <div class="image-row">
-            <img src="/media/RayTracer1.png" alt="Camera movement gif" class="gameDescriptionImage">
-            <img src="/media/RayTracer2.png" alt="Camera movement gif" class="gameDescriptionImage">
-            <img src="/media/RayTracer3.png" alt="Camera movement gif" class="gameDescriptionImage">
+            <img src="/media/RayTracer1.png" alt="CarMirror" class="gameDescriptionImage">
+            <img src="/media/RayTracer2.png" alt="CarReflection" class="gameDescriptionImage">
+            <img src="/media/RayTracer3.png" alt="CarInside" class="gameDescriptionImage">
           </div>
         </div>
       </div>
@@ -45,14 +45,19 @@
       <hr class="line" style="width: 100%; margin: 0 auto; height: 0.2vh; border: none; background-color: rgb(128, 128, 128);">
       
       <!-- Project 2 (reverse layout) -->
-      <div class="project">
+      <div class="projectReversed">
         <div class="project-video videoContainer">
-          <iframe src="https://www.youtube.com/embed/ScMzIvxBSi4" title="Project 2 Video" allowfullscreen></iframe>
+          <iframe src="https://www.youtube.com/embed/iiEUDetuJPs" title="Project 2 Video" allowfullscreen></iframe>
         </div>
         <div class="project-text content">
           <h2>Dynamically Deformable Heightmap via Tessellation Shader in Vulkan</h2>
           <hr class="line" style="width: 100%; margin: 0 auto; height: 0.2vh; border: none; background-color: rgb(64, 64, 64);">
           <p>This project demonstrates [description]. Key highlights include [techniques, tools, or features].</p>
+          <div class="image-row">
+            <img src="/media/HeightMap1.png" alt="EditedGreen" class="gameDescriptionImage">
+            <img src="/media/HeightMap2.png" alt="KindaSky" class="gameDescriptionImage">
+            <img src="/media/HeightMap3.png" alt="WireFrame" class="gameDescriptionImage">
+          </div>
         </div>
       </div>
 
@@ -66,7 +71,7 @@
         <div class="project-text content">
           <h2>Custom 2D Shadow Casting via Compute Shaders in OpenGL</h2>
           <hr class="line" style="width: 100%; margin: 0 auto; height: 0.2vh; border: none; background-color: rgb(64, 64, 64);">
-          <p>Describe your project here with what it achieved, challenges you overcame, and technologies used.</p>
+          <p>PlaceHolder.</p>
         </div>
       </div>
     </div>
