Finished heightmap section

--- a/showcase/index.html
+++ b/showcase/index.html
@@ -31,7 +31,6 @@
         </div>
         <div class="project-text content">
           <h2>Real-Time Hardware Accelerated Raytracing in Vulkan</h2>
-          <hr class="line" style="width: 100%; margin: 0 auto; height: 0.2vh; border: none; background-color: rgb(64, 64, 64);">
       
           <p>This personal project is the result of my interest in high speed raytracing techniques and the Vulkan API. By utilizing Vulkan’s hardware accelerated raytracing I was able to implement realistic features like shadows, reflections and transparency all in real-time. Coming together for a level of visual realism that I am very proud of!</p>
           <div class="image-row">
@@ -51,8 +50,7 @@
         </div>
         <div class="project-text content">
           <h2>Dynamically Deformable Heightmap via Tessellation Shader in Vulkan</h2>
-          <hr class="line" style="width: 100%; margin: 0 auto; height: 0.2vh; border: none; background-color: rgb(64, 64, 64);">
-          <p>This project demonstrates [description]. Key highlights include [techniques, tools, or features].</p>
+          <p>These heightmaps are my favorite personal contribution to the NiteLite Engine, a custom 3D engine rendered using Vulkan. These heightmaps were designed to be able to deformed during runtime without affecting the performance. In addition the geometry of the heightmap's mesh is subdivided on the GPU using tessellation shaders. This was done to avoid sending large amounts of data while maintaining a high resolution final result.</p>
           <div class="image-row">
             <img src="/media/HeightMap1.png" alt="EditedGreen" class="gameDescriptionImage">
             <img src="/media/HeightMap2.png" alt="KindaSky" class="gameDescriptionImage">
@@ -64,14 +62,14 @@
        <hr class="line" style="width: 100%; margin: 0 auto; height: 0.2vh; border: none; background-color: rgb(128, 128, 128);">
 
       <!-- Project 3 -->
-      <div class="project">
+      <div class="project" style="margin-top: 50px;">
         <div class="project-video videoContainer">
           <iframe src="https://www.youtube.com/embed/ScMzIvxBSi4" title="Project 3 Video" allowfullscreen></iframe>
         </div>
         <div class="project-text content">
           <h2>Custom 2D Shadow Casting via Compute Shaders in OpenGL</h2>
           <hr class="line" style="width: 100%; margin: 0 auto; height: 0.2vh; border: none; background-color: rgb(64, 64, 64);">
-          <p>PlaceHolder.</p>
+          <p>PlaceHolder</p>
         </div>
       </div>
     </div>
