--- a/showcase/index.html
+++ b/showcase/index.html
@@ -49,7 +49,7 @@
           <iframe src="https://www.youtube.com/embed/iiEUDetuJPs" title="Project 2 Video" allowfullscreen></iframe>
         </div>
         <div class="project-text content">
-          <h2>Dynamically Deformable Heightmap via Tessellation Shader in Vulkan</h2>
+          <h2>Dynamically Deformable Heightmap via Tessellation Shaders in Vulkan</h2>
           <p>These heightmaps are my favorite personal contribution to the NiteLite Engine, a custom 3D engine rendered using Vulkan. These heightmaps were designed to be able to deformed during runtime without affecting the performance. In addition the geometry of the heightmap's mesh is subdivided on the GPU using tessellation shaders. This was done to avoid sending large amounts of data while maintaining a high resolution final result.</p>
           <div class="image-row">
             <img src="/media/HeightMap1.png" alt="EditedGreen" class="gameDescriptionImage">
@@ -69,7 +69,12 @@
         <div class="project-text content">
           <h2>Custom 2D Shadow Casting via Compute Shaders in OpenGL</h2>
           <hr class="line" style="width: 100%; margin: 0 auto; height: 0.2vh; border: none; background-color: rgb(64, 64, 64);">
-          <p>PlaceHolder</p>
+          <p>This shadow casting algorithm was one of my personal contributions to KnightLight, a platformer game made in a custom 2D engine. This shadow casting algorithm, inspired by 3D raytracing, uses compute shaders to efficiently cast shadows while accurately lighting the terrain itself. Switching to this algorithm from more common approaches not only allowed the system to meet design requirements it also greatly improved the engine’s performance.</p>
+          <div class="image-row">
+            <img src="/media/ShadowCaster1.png" alt="Shadows" class="gameDescriptionImage">
+            <img src="/media/ShadowCaster2.png" alt="CarReflection" class="gameDescriptionImage">
+            <img src="/media/ShadowCaster3.png" alt="PrettyScene" class="gameDescriptionImage">
+          </div>
         </div>
       </div>
     </div>
