Added last video

--- a/showcase/index.html
+++ b/showcase/index.html
@@ -64,7 +64,7 @@
       <!-- Project 3 -->
       <div class="project" style="margin-top: 50px;">
         <div class="project-video videoContainer">
-          <iframe src="https://www.youtube.com/embed/ScMzIvxBSi4" title="Project 3 Video" allowfullscreen></iframe>
+          <iframe src="https://www.youtube.com/embed/_16cByDaOxU" title="Project 3 Video" allowfullscreen></iframe>
         </div>
         <div class="project-text content">
           <h2>Custom 2D Shadow Casting via Compute Shaders in OpenGL</h2>
